@startuml
'https://plantuml.com/class-diagram

entity goals {
    id : number primary key <<generated>>
    type : nvarchar 50
    creation_date : Timestamp
    active : boolean
}

entity steps {
    id : number <<generated>>
    goal_id : number <<FK>>
    description : TEXT
    due_date : timestamp
    completed : boolean
    completion_date : Timestamp
}

entity tasks {
    id : number <<generated>>
    step_id : number <<FK>>
    description: TEXT
    completed: boolean
    completion_date : Timestamp
    creation_date : Timestamp
}
goals ||..o{ steps
steps |o..o{ tasks

@enduml